@startuml

hide members

class PluginProcessor
class GenericAudioProcessorEditor
class Flanger
class FractionalDelayLine
class Oscillator
class Parameters {
  ---
  +lfoFrequency
}

show Parameters members

PluginProcessor --> GenericAudioProcessorEditor
PluginProcessor --> Flanger
Flanger --> FractionalDelayLine
Flanger --> Oscillator: lfo
Flanger --> Parameters

@enduml
